--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -428,6 +428,8 @@ When comparing head pitch and yaw data between the RW and VR periods within the 
 \end{center}
 \end{table}
 
+\newpage
+
 Calculating the mean standard deviation in yaw for both RW and VR periods, weighted by the duration of those periods, shows this relationship more analytically. With reference to the figures in table \ref{sdyawtab} the mean standard deviation in yaw while perceiving VR stimuli is higher than while perceiving RW stimuli for participant 1 (39.887\textdegree\ compared to 25.545\textdegree) and even more so for participant 3 (60.636\textdegree\ compared to 11.702\textdegree). The values are closer for participant 5 due to the initial large delta in yaw just before the first transition into VR at around 130 seconds. Recalculating the weighted mean standard deviation from 150 seconds onwards for participant 5 to exclude this peak gives rise to the values of 36.074\textdegree\ for VR stimuli compared to 17.046\textdegree\ for RW stimuli, which is more in fitting with the trend shown by figure \ref{5_pitch_yaw.png}. The exception to this observation of correlation between head movement and environment is participant 4, however this participant displayed very restricted head movement throughout both scenarios when compared to all of the other participants.
 
 When considering the amount of time spent perceiving each environment in the parallel reality scenario, several of the participants showed frequent transitioning behaviour where they would perform many transitions and remain perceiving the visual stimuli from each environment for only a few seconds: for participants 1, 4 and 6, the mean times for both RW and VR periods are all between 1.68 and 3.4 seconds. Participant 3 spent longer perceiving each environment with a RW mean of 18.2 seconds and a VR mean of 7 seconds. The outlier is participant 5 with a RW mean of 31.8 seconds and a VR mean of 3.6 seconds; this was the participant who found it uncomfortable to walk while wearing the DK1, so a much longer amount of time spent perceiving RW stimuli is understandable.
@@ -825,6 +827,8 @@ For all participants there was once again substantially more yaw change than pit
 
 %=====================
 
+\newpage
+
 Plots of position data upon the floorplan of the chapel highlight one situation in which the parallel reality scenarios served to restrict participant exploration compared to the seated VR scenario. During the seated VR scenario participants could move their virtual vantage through positions that were impossible to move through during the parallel reality scenarios due to the presence of real obstructions. Figures \ref{08-seatedmap.png} (seated VR scenario) and \ref{08-13map.png} (scenario 1-3) show this relationship using participant 8 as an example. In the seated VR scenario participant 8 walked around the nave (the open area on the left of the floorplan) however during the scenario 1-3 they were prevented from doing so due to the presence of rows of chairs set out throughout the real nave and thus were only able to walk down, parallel with one of the rows of chairs, toward the south facing door.
 
 \TwoFig{splodge-maps/08-seatedmap.png}{Position data during parallel reality scenario for participant 8.}{08-seatedmap.png}
@@ -859,6 +863,8 @@ When comparing head pitch and yaw data between the RW and VR periods within the 
 	\label{12-1-4-pitch-yaw.png}
 	\end{center}
 \end{figure}
+
+\newpage
 
 When comparing head movement as mean standard deviation weighted by duration of the periods (tables \ref{mean-sd-yaw-1-3} and \ref{mean-sd-yaw-1-4}) between the RW and VR portions of the two parallel reality scenarios, this relationship is seen much more substantially in scenario 1-4. Part of this is due to the fact that all participants in scenario 1-4 showed less change in yaw in the RW periods than in the RW periods of scenario 1-3. Whilst this apparent increased comfort with larger head movements in VR in scenario 1-4 could be explained due to familiarity, the magnitude of the difference between scenario 1-3 and scenario 1-4 makes it hard to believe that familiarity is the sole reason, especially considering that scenario 1-4 was not a drastically different experience to scenario 1-3 as only the addition of transition 4 differentiated it from scenario 1-3. One possible contributor, as mentioned by one participant during the interview stage, is that they spent more time perceiving VR in scenario 1-4 in order to \textit{avoid} the automatic transition that would occur when perceiving RW.
 
@@ -962,6 +968,8 @@ Some participants showed behaviour where they `tried out' the different transiti
 %	\end{center}
 %\end{figure}
 
+\newpage
+
 Other participants continued to use all available transition styles throughout a session, such as participant 13 during scenario 1-3 (figure \ref{13-pitch-yaw-1-3.png}). This was one of the longest individual sessions, with the participant exploring the RW and VR chapels in tandem in parallel reality via the Mirrorshades platform for over 8.5 minutes. During the interview s/he reported preferring transition 3 via the right trigger \texttt{[RT]}, which is corroborated by the data. S/he triggered this transition more than transition 1 or 2 (25 times total, compared to 20 for transition 1 and 14 for transition 2) and spent longer perceiving VR via transition 3 than the others (103 seconds total compared to 81.5 seconds for transition 1 and 20 seconds for transition 2, with a mean of 4.12 seconds for each period using transition 3, 4.075 seconds for transition 1 and 1.429 seconds for transition 2).
 
 \begin{figure}
@@ -995,6 +1003,8 @@ As seen in the results to the stage 1 evaluation, there is also a correlation in
 \end{figure}
 
 %=====================
+
+\newpage
 
 \subsubsection{Use of Intermediary Opacities}
 
@@ -1036,6 +1046,8 @@ Confirming responses during the post task interviews, several participants made 
 %	one spent more time in real in 1-3 and then more time in virtual tin 1-4 (familiarity?)
 
 %=========================================================================================================
+
+\newpage
 
 \subsection{IPQ}
 
@@ -1175,7 +1187,7 @@ Performance of IndoorAtlas throughout both scenario 1-3 (figure \ref{2-1-positio
 
 \TwoFig{2.1/2-1-positiondeltas1-3.png}{Distance between subsequent IndoorAtlas position data for scenario with transitions 1-3.}{2-1-positiondeltas1-3.png}
        {2.1/2-1-positiondeltas1-4.png}{Distance between subsequent IndoorAtlas position data for scenario with transitions 1-4.}{2-1-positiondeltas1-4.png}
-       
+
 Plots of position data upon the floorplan of the chapel illustrate how these occasional larger displacements could be particularly unpleasant when they coincided with the participant observing the virtual environment, due to the manner in which the virtual vantage would always follow the shortest/most direct path between subsequent positions, causing it to `pass through' any virtual obstructions along this path. Figures \ref{10-13map.png} and \ref{10-14map.png} show position data for participant 10 during scenario 1-3 and scenario 1-4 respectively. In scenario 1-3 the position data mostly fall on or close to the recorded IndoorAtlas routes (see figure \ref{sallies-indoor-atlas-routes.png}), however during scenario 1-4 there are position data outwith these routes and `in the middle' of virtual obstructions. For example, at one point a position was reported within the pews at the North wall of the building. A subsequent position was reported at the door adjacent to the tomb at the East end of the North wall of the building. Whilst both of these positions were occupiable by the participant in both the real and virtual environments, the direct path between them that the virtual vantage navigated (and upon which there are several reported positions due to the duration of this virtual movement) was not possible: it required the virtual vantage to pass through the actual seats/backs of the pews and partly through the North wall itself, an unpleasant experience when wearing a HMD.
 
 \TwoFig{splodge-maps/10-13map.png}{Position data during scenario 1-3 for participant 8.}{10-13map.png}
@@ -1319,6 +1331,10 @@ Observations that come to light when comparing log data between the two parallel
 	\end{center}
 \end{figure}
 
+In combination with interview feedback these log data are explained by the notion that the 50/50 scenario was more engaging, with participants not finding it necessary to perform transitions to VR as frequently in order to perceive enough VR stimuli to engage with it.
+
+When considering the distribution of variance in head pitch and yaw in relation to whether participants were viewing the default position or VR, maximum variance in stage 2.2 was no longer as closely related to the VR periods as in previous stages of the evaluation. Participant 14 in particular frequently displayed maximum variance when viewing the default position, more so even than when viewing VR, as shown by figure \ref{14-pitch-yaw-75_25.png}. While this is understandable in the sense that the participants no longer necessarily needed to perform a transition to VR in order to see a sufficient amount of the VR environment, it is worth highlighting that by allowing the user to see the VR environment in this manner means that they were simultaneously perceiving more angles of the RW environment which in earlier stages of evaluation they may not have seen as maximum variance in pitch and yaw only occurred when they were viewing VR visual stimuli.
+
 \begin{table}
 \begin{center}
 \begin{tabularx}{\textwidth}{c *{6}{>{\centering\arraybackslash}X}}
@@ -1375,10 +1391,6 @@ Observations that come to light when comparing log data between the two parallel
 \end{center}
 \end{table}
 
-In combination with interview feedback these log data are explained by the notion that the 50/50 scenario was more engaging, with participants not finding it necessary to perform transitions to VR as frequently in order to perceive enough VR stimuli to engage with it.
-
-When considering the distribution of variance in head pitch and yaw in relation to whether participants were viewing the default position or VR, maximum variance in stage 2.2 was no longer as closely related to the VR periods as in previous stages of the evaluation. Participant 14 in particular frequently displayed maximum variance when viewing the default position, more so even than when viewing VR, as shown by figure \ref{14-pitch-yaw-75_25.png}. While this is understandable in the sense that the participants no longer necessarily needed to perform a transition to VR in order to see a sufficient amount of the VR environment, it is worth highlighting that by allowing the user to see the VR environment in this manner means that they were simultaneously perceiving more angles of the RW environment which in earlier stages of evaluation they may not have seen as maximum variance in pitch and yaw only occurred when they were viewing VR visual stimuli.
-
 \begin{figure}
 	\begin{center}
 	\includegraphics[width=\textwidth]{2.2/14-pitch-yaw-75_25.png}
@@ -1405,17 +1417,12 @@ Participant 17 exhibited extremely restricted head movement (figure \ref{17-pitc
 
 %=========================================================================================================
 
+\newpage
+
 \subsection{IPQ}
 
 When considering the IPQ results for stage 2.2 participants the seated VR scenario presents very similar results for all of SP, INV and REAL (tables \ref{sp-2-2-table}, \ref{inv-2-2-table} and \ref{real-2-2-table} respectively) to the seated VR scenario from stage 2.1 (tables \ref{sp-2-1-table}, \ref{inv-2-1-table} and \ref{real-2-1-table}). This was to be expected and confirms these values as good baseline IPQ results for a seated VR experience at the chapel.
 
-SP was reduced in the 75/25 scenario to a level slightly lower than that in both parallel reality scenarios in stage 2.1, while in the 50/50 scenario there was a marked increase in SP to a level (4.7) above any other scenario in either stage, including the seated VR scenarios. This hints toward the optimistic expectation of a good parallel reality experience resulting in reduced INV but increased SP compared to a seated VR scenario, by representation of bodily actions within the RW environment leading to an increase in experienced spatial presence within the (spatially equivalent) VR environment.
-
-INV was reduced in the 75/25 scenario and further reduced in the 50/50 scenario, as was to be expected. Interestingly however, the INV results for both parallel reality scenarios in stage 2.2 were notably higher than those for the parallel reality scenarios of stage 2.1, a discrepancy that is not contained within the higher INV for the traditional VR scenario in stage 2.2 compared to stage 2.1. When considering the difference between SP and INV for each scenario in stage 2.2, the further reduced INV value for the 50/50 scenario combined with its increased SP value indicates that in terms of the vacancy problem, the 50/50 scenario achieved a larger mitigation than the 75/25 scenario.
-
-REAL was reduced in the 75/25 scenario to almost exactly the same level as both parallel reality scenarios in stage 2.1, however for the 50/50 scenario REAL was only reduced a miniscule amount (a reduction of 0.118 from 2.563 to 2.438). This implies that the increased visibility of the VR environment when perceiving the RW environment helped to enhance the perceived realness of the VR environment, possibly by mitigating the somewhat rudimentary visual quality of the virtual model by making complimentary and supporting aspects of the RW environment more prominent.
-
-When considering SP3 and INV2 in isolation, the mean SP3 for the seated VR scenario is confusingly low at 1.75 (table \ref{sp3-inv2-2-2-table}). This is especially odd considering the relatively high mean for the overall SP subscale in the seated VR scenario of 4.3 (table \ref{sp-2-2-table}). It is also completely out of line with the mean SP3 for the seated VR scenario from stage 2.1 of 4.5 (table \ref{sp-2-1-table}), which was in keeping with the overall SP mean of 4.6 (table \ref{sp3-inv2-2-1-table}) for the traditional VR scenario in stage 2.1. This oddity could be explained by possible confusion among the stage 2.2 participants the first time they completed the questionnaire over the wording of SP3, which presents a negative - \textit{``I did \textbf{not} feel present in the virtual space''} (emphasis added), anchored between \textit{``did not feel''} and \textit{``felt present''}.
 
 \begin{table}
 \begin{center}
@@ -1523,6 +1530,15 @@ seated & 1.75 & 2.217 & 5 & 0.816 \\
 \end{center}
 \end{table}
 
+
+SP was reduced in the 75/25 scenario to a level slightly lower than that in both parallel reality scenarios in stage 2.1, while in the 50/50 scenario there was a marked increase in SP to a level (4.7) above any other scenario in either stage, including the seated VR scenarios. This hints toward the optimistic expectation of a good parallel reality experience resulting in reduced INV but increased SP compared to a seated VR scenario, by representation of bodily actions within the RW environment leading to an increase in experienced spatial presence within the (spatially equivalent) VR environment.
+
+INV was reduced in the 75/25 scenario and further reduced in the 50/50 scenario, as was to be expected. Interestingly however, the INV results for both parallel reality scenarios in stage 2.2 were notably higher than those for the parallel reality scenarios of stage 2.1, a discrepancy that is not contained within the higher INV for the traditional VR scenario in stage 2.2 compared to stage 2.1. When considering the difference between SP and INV for each scenario in stage 2.2, the further reduced INV value for the 50/50 scenario combined with its increased SP value indicates that in terms of the vacancy problem, the 50/50 scenario achieved a larger mitigation than the 75/25 scenario.
+
+REAL was reduced in the 75/25 scenario to almost exactly the same level as both parallel reality scenarios in stage 2.1, however for the 50/50 scenario REAL was only reduced a miniscule amount (a reduction of 0.118 from 2.563 to 2.438). This implies that the increased visibility of the VR environment when perceiving the RW environment helped to enhance the perceived realness of the VR environment, possibly by mitigating the somewhat rudimentary visual quality of the virtual model by making complimentary and supporting aspects of the RW environment more prominent.
+
+When considering SP3 and INV2 in isolation, the mean SP3 for the seated VR scenario is confusingly low at 1.75 (table \ref{sp3-inv2-2-2-table}). This is especially odd considering the relatively high mean for the overall SP subscale in the seated VR scenario of 4.3 (table \ref{sp-2-2-table}). It is also completely out of line with the mean SP3 for the seated VR scenario from stage 2.1 of 4.5 (table \ref{sp-2-1-table}), which was in keeping with the overall SP mean of 4.6 (table \ref{sp3-inv2-2-1-table}) for the traditional VR scenario in stage 2.1. This oddity could be explained by possible confusion among the stage 2.2 participants the first time they completed the questionnaire over the wording of SP3, which presents a negative - \textit{``I did \textbf{not} feel present in the virtual space''} (emphasis added), anchored between \textit{``did not feel''} and \textit{``felt present''}.
+
 %=========================================================================================================
 
 \subsection{Graphical Performance}
@@ -1539,6 +1555,8 @@ Once again the seated VR scenario provided the highest framerates (for the 2x pa
 \end{figure}
 
 %=========================================================================================================
+
+\newpage
 
 \subsection{IndoorAtlas Performance}
 
