--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -145,6 +145,8 @@ Table \ref{adopted-alternate-reality-definitions} presents the basic categories 
 
 %=========================================================================================================
 
+\newpage
+
 \begin{center}
 \begin{longtable}{ l p{10cm} }
 
@@ -186,6 +188,12 @@ Modulated Reality & Platforms that aim to modify the user's view, by multiplicat
 
 %=========================================================================================================
 
+Mixed Reality (MR) & The broad range of environments that arise from the merging of real and virtual environments to some extent, such that the result is neither entirely real nor entirely virtual, with real and virtual objects co-existing. Both augmented reality and augmented virtuality are included under the broader classification of mixed reality. \\
+
+\hline
+		
+%=========================================================================================================
+
 Virtual Reality (VR) & The polar opposite of reality, an environment that consists solely of virtual objects, with computer-based quantitative information associated with and between all of them, creating a completely synthetic world entirely discrete and separate from the real world; a new world that exists solely within the data structures of a computer~\cite{Milgram1999, Want2009}. One of the fundamental primary environments, occupying an endpoint of the reality-virtuality continuum. \\
 
 & While traditional definitions of virtual reality require the environment to be completely immersive, such that when involved with the environment the user is completely unaware of the real environment that surrounds them (such as by using HMD and body tracking techniques to remove logical anchors to the real world\footnote{\url{http://www.techcastglobal.com/documents/10193/34869/++Aaron/aade1a72-900b-4261-9214-061fba89053d}}) one can also adopt less drastic criteria and classify the virtual environments presented by video games viewed via traditional computer monitors as rudimentary implementations of virtual reality - \textit{``a virtual reality accessed through standard personal computers is arguably very much in evidence in computer games''}~\cite{Green2014}. \\
@@ -197,12 +205,6 @@ Virtual Reality (VR) & The polar opposite of reality, an environment that consis
 %Distributed Virtual Reality (DVR) & Multi-user VR where telecommunications are employed to allow multiple (geographically distributed) users to occupy the same VR environment, allowing cooperation~\cite{Terashima2001}. \\
 
 %\midrule
-		
-%=========================================================================================================
-
-Mixed Reality (MR) & The broad range of environments that arise from the merging of real and virtual environments to some extent, such that the result is neither entirely real nor entirely virtual, with real and virtual objects co-existing. Both augmented reality and augmented virtuality are included under the broader classification of mixed reality. \\
-
-\hline
 		
 %=========================================================================================================
 
