--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -276,6 +276,8 @@ The concept of a bidirectional connection between real and virtual environments,
 
 %=========================================================================================================
 
+\newpage
+
 \subsection{The Vacancy Problem}
 
 One of the driving motivations behind Lifton's work was what he dubbed `the vacancy problem':
@@ -357,7 +359,7 @@ Of particular importance is to appreciate the distinction between a cross realit
 	\end{center}
 \end{figure}
 
-\begin{figure}
+\begin{figure}[h]
 	\begin{center}
 		\includegraphics[width=\textwidth]{virtuality-continuum-cross-reality-2.png}
 		\caption{A cross reality system with the user attending to real stimuli.}
